# cherrita-gtk-theme

./: README.md  meson.build  meson_options.txt
assets/: pallete.scss
gnome-shell/src/: fix-asset-link.sh  gnome-shell-high-contrast.scss  gnome-shell.scss  meson.build
gnome-shell/src/overlay/: _colors.scss  _common.scss  _widgets.scss
gnome-shell/src/overlay/widgets/: _app_grid.scss  _calendar.scss  _dash.scss  _login-dialog.scss  _panel.scss  _switches.scss
gtk-2.0/: meson.build
gtk-2.0/dark/: gtkrc  hacks-dark.rc  meson.build
gtk-2.0/default/: gtkrc  main.rc  meson.build
gtk-3.0/: sync.sh
gtk-3.0/src/: _common.scss  _properties.scss  dark-theme-linker.sh  gtk-dark.css  gtk-dark.scss  gtk.css  gtk.gresource.xml.in  gtk.scss  meson.build
gtk-3.0/src/overlay/: _colors.scss  _common.scss  _pallete.scss
metadata/: meson.build
metadata/dark/: meson.build
metadata/default/: meson.build
